# px4_ros_ws3

./: .gitignore  360lidar demo  MASTER_REPO_README.md  RUN THIS AFTER CLONING  SITL_x500_oak_tfluna_d500_notes.md  commands  create_master_repo.sh  encryption  fix_px4_submodule.sh  kill_simulation.sh  new commands  run_subtree_merges.sh  run_subtree_merges_retry.sh  setup_after_clone.sh  simple_avoidance.py  start_simulation.sh  start_simulation_gnome.sh  ye
.devcontainer/: Dockerfile.txt  devcontainer.json
PX4-Autopilot/: .git.subtree_bak  CMakeLists.txt  Makefile
PX4-Autopilot/Tools/simulation/gz/worlds/: maze.sdf
PX4-Autopilot/cmake/: px4_git.cmake
PX4-Autopilot/src/lib/version/: px_update_git_header.py
ROMFS/px4fmu_common/init.d-posix/airframes/: 4022_gz_x500_oak_tfluna_d500  CMakeLists.txt
Tools/simulation/gz/models/OakD-Lite/: model.sdf
Tools/simulation/gz/models/x500_oak_tfluna_d500/: model.config  model.sdf
Tools/simulation/gz/worlds/: maze.sdf
old files/: run_subtree_merges.sh
src/fault_monitor/: package.xml  setup.cfg  setup.py
src/fault_monitor/fault_monitor/: failsafe_monitor.py
src/px4_ros_com/: CMakeLists.txt  package.xml
src/px4_ros_com/launch/: wasd_teleop_launch.yaml
src/px4_sensor_viz_bringup/: CMakeLists.txt  LDLIDAR_LD19_SETUP.md  OAK_D_LITE_SETUP.md  README.md  package.xml
src/px4_sensor_viz_bringup/config/: ldlidar_ld19.yaml  ldlidar_ld19_demo.rviz  oak_d_lite_demo.rviz  oak_d_lite_demo.yaml  sitl_oak_lidar.rviz
src/px4_sensor_viz_bringup/launch/: ldlidar_ld19_demo.launch.py  oak_d_lite_demo.launch.py  sitl_oak_lidar_viz.launch.py
src/px4_sensor_viz_bringup/scripts/: tf_sanitizer.py
(+6 files in other folders)
